Fix menu alignment weirdness

--- a/src/stylesheets/notebook.scss
+++ b/src/stylesheets/notebook.scss
@@ -304,7 +304,7 @@ div.ace_error-marker {
   border: solid 2px #A8A8A8;
   font-weight: $bold;
   list-style-type: none;
-  left: -1px;
+  left: -2px;
   min-width: 18em;
   opacity: 0;
   margin-top: 2.13em;
@@ -324,7 +324,7 @@ div.ace_error-marker {
     position: absolute;
     top: -2px;
     height: 3px;
-    width: 2.9em;
+    width: 2.95em;
   }
 }
 
